# model/constant.go
@@ -36,7 +36,26 @@ var (
 	NewStore   = "new-store"
 	CreateUser = "create-user"
 	GetUsers = "get-users"
+	GetUserByFilter = "get-user-by-filter"
 	GetUserByID = "get-user-by-id"
 	UpdateUser = "update-user"
 	DeleteUser = "delete-user"
+)
+
+var (
+	Value    = "value"
+	Email    = "email"
+	Password = "password"
+	UserID   = "userID"
+	Expire   = "exp"
+
+	Authorization = "X-Token"
+
+	DNS = "host=localhost user=vishal password=password dbname=manage port=5432 sslmode=disable"
+
+	DataPerPage = "limit"
+	PageNumber  = "page"
+	StartDate   = "start_date"
+	EndDate     = "end_date"
+	TimeLayout  = "2006-01-02 15:04:05.000 -0700"
 )
